# tree-sitter-onescript

./: CMakeLists.txt  Cargo.toml  LICENCE  Makefile  Package.swift  README.MD  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  parser.exp  parser.lib  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml
bindings/c/: tree-sitter-onescript.h  tree-sitter-onescript.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_onescript/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterOneScriptTests/: TreeSitterOneScriptTests.swift
src/: grammar.json  node-types.json  parser.c
test/corpus/: annotations.txt  comment.txt  directives.txt  expressions.txt  function.txt  procedure.txt  statements.txt  vars.txt
